crates/sui-graphql-macros/tests/compile/schema_validation_field_not_found.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct InvalidField {
    #[field(path = "object.nonExistentField")]
    address: String,
}

fn main() {}
